<resources>
    <string name="app_name">Baking App</string>
    <string name="action_refresh">Refresh</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="error_message">No Recipes Available</string>
    <string name="error_connection_message">No Internet Connectivity</string>
    <string name="error_api_message">Issue Fetching Recipes</string>

    <string name="recipe_serving">Serves: %1$s</string>

    <string name="testRecipeText">Cheesecake</string>
    <string name="testIntentRecipeText">Nutella Pie</string>
    <string name="testIntentTabText">Steps</string>
    <string name="testIntentRecyclerText">Recipe Introduction</string>
    <string name="testIntentDescriptionText">1. Preheat the oven</string>

    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="recipe_step_image_description">Recipe Step Placeholder Image</string>
    <string name="recipe_description">Recipe Introduction</string>

    <string name="widget_recipe_saved">The Ingredients for this Recipe will be available in a Widget.</string>
    <string name="no_recipe_liked">No Recipe Liked</string>
    <string name="widget_empty_text">Please like a Recipe to view the Recipe Ingredients here</string>
    <string name="recipe_like">Like</string>
    <string name="placeholder_quantity">961</string>
    <string name="placeholder_measure">TBLSP</string>
    <string name="placeholder_ingredient">unsalted butter, softened and cut into 1 in. cubes</string>
</resources>
