<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/recipe_detail_step_video"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_size" />

        <ImageView
            android:id="@+id/recipe_detail_step_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_size"
            android:contentDescription="@string/recipe_step_image_description"/>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/medium"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/prev_step"
                android:layout_width="@dimen/no_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/button_previous"/>

            <View
                android:layout_width="@dimen/no_dp"
                android:layout_height="@dimen/button_divider"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/next_step"
                android:layout_width="@dimen/no_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/button_next"/>

        </LinearLayout>

        <TextView
            android:id="@+id/recipe_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/colorTextOnBackground"
            android:layout_marginTop="@dimen/large"
            tools:text="@string/recipe_description" />

    </LinearLayout>

</LinearLayout>