...
        android:orientation="horizontal">

        <ImageButton android:id="@id/exo_rew"
            style="@style/ExoMediaButton.Rewind"
            android:tint="@color/colorAccent"/>

        <ImageButton android:id="@id/exo_prev"
            style="@style/ExoMediaButton.Previous"
            android:tint="@color/colorAccent"/>

        <ImageButton android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:tint="@color/colorAccent"/>

        <ImageButton android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:tint="@color/colorAccent"/>

        <ImageButton android:id="@id/exo_ffwd"
            style="@style/ExoMediaButton.FastForward"
            android:tint="@color/colorAccent"/>
...
